--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8">
     <title>Threads</title>
     <script type="text/javascript" src="/rhizome/rhizome.js"></script>
-    <script type="text/javascript" src="/js/main.bundle.js"></script>
   </head>
-  <body onload="init()">
-    <h1>hey</h1>
+  <body>
+    <div id="app">
+
+    </div>
+    <script type="text/javascript" src="/js/main.bundle.js"></script>
   </body>
 </html>
