simple client/control communication

--- a/public/controller.html
+++ b/public/controller.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Threads</title>
+    <title>Threads - Controller</title>
     <script type="text/javascript" src="/js/rhizome.js"></script>
     <link rel="stylesheet" href="/css/skeleton/normalize.css">
   </head>
@@ -10,6 +10,6 @@
     <div id="app">
 
     </div>
-    <script type="text/javascript" src="/js/main.bundle.js"></script>
+    <script type="text/javascript" src="/js/controller.bundle.js"></script>
   </body>
 </html>
