added OSC connection and minor fixes

--- a/public/controller.html
+++ b/public/controller.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Threads - Controller</title>
     <script type="text/javascript" src="/js/rhizome.js"></script>
+    <script type="text/javascript" src="/js/osc-browser.js"></script>
     <link rel="stylesheet" href="/css/skeleton/normalize.css">
   </head>
   <body>
