--- a/public/controller.html
+++ b/public/controller.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src="/js/rhizome.js"></script>
     <script type="text/javascript" src="/js/osc-browser.js"></script>
     <link rel="stylesheet" href="/css/skeleton/normalize.css">
+    <link rel="shortcut icon" href="/media/favicon.ico">
   </head>
   <body>
     <div id="app">
