--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title>Threads</title>
     <script type="text/javascript" src="/js/rhizome.js"></script>
     <link rel="stylesheet" href="/css/skeleton/normalize.css">
+    <link rel="shortcut icon" href="/media/favicon.ico">
   </head>
   <body>
     <div id="app">
